--- a/package.json
+++ b/package.json
@@ -1,5 +1,19 @@
 {
   "devDependencies": {
     "typescript": "^4.7.4"
-  }
+  },
+  "dependencies": {
+    "json-server": "^0.17.0"
+  },
+  "name": "framework",
+  "version": "1.0.0",
+  "main": "index.js",
+  "scripts": {
+    "start:db": "json-server -w db.json",
+    "start:parcel": "parcel index.html"
+  },
+  "keywords": [],
+  "author": "",
+  "license": "ISC",
+  "description": ""
 }
