--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
     "typescript": "^4.7.4"
   },
   "dependencies": {
+    "axios": "^0.27.2",
     "json-server": "^0.17.0"
   },
   "name": "framework",
